--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <!-- <p-messages [(value)]="msgs"></p-messages> -->
 
-<h3>Transactions and Incomes of Branch</h3>
+<h3>Transacti and Incomes of Branch</h3>
 <div class="grids mr-5">
     <div class="col-12 md:col-6 lg:col-3">
         <div class="surface-card shadow-2 p-3 border-round">
